--- a/src/components/widgets/cards.css
+++ b/src/components/widgets/cards.css
@@ -7,35 +7,35 @@
   flex-direction: column;
   background-color: white;
   padding: 1.2em 1.5em;
-  border-radius: 25px;
+  border-radius: 1.6em;
   box-shadow: 7px 0 12px rgba(65, 89, 89, 0.3);
 }
 
 .small-rectangle {
-  border-radius: 20px;
+  border-radius: 1.25em;
   padding: 1em;
-  width: 200px;
-  height: 90px;
+  width: 12.5em;
+  height: 5.625em;
 }
 
 .small-square {
-  width: 200px;
-  height: 200px;
+  width: 12.5em;
+  height: 12.5em;
 }
 
 .big-rectangle-width {
-  width: 420px;
-  height: 200px;
+  width: 26.25em;
+  height: 12.5em;
 }
 
 .big-rectangle-height {
-  width: 200px;
-  height: 420px;
+  width: 12.5em;
+  height: 26.25em;
 }
 
 .big-square {
-  width: 420px;
-  height: 420px;
+  width: 26.25em;
+  height: 26.25em;
 }
 
 .card-header {
@@ -47,4 +47,5 @@
 
 .card-content {
   flex: 1;
+  position: relative;
 }
