--- a/src/components/utilities/ToggleButton.css
+++ b/src/components/utilities/ToggleButton.css
@@ -2,7 +2,7 @@
 .switch-background{
     height:17px;
     width:36px;
-    /* background:linear-gradient(rgba(0, 0, 0, 0.07), rgba(255, 255, 255, 0)), #f4f4f4; */
+    background-color: #fff;
     box-shadow :inset 0 0 7px rgba(68, 105, 99, 0.15), inset 0 0 5px -2px rgba(68, 105, 99, 0.25);
     border-radius:17px;
     position:relative;
