--- a/src/components/widgets/meteo-day/MeteoDay.css
+++ b/src/components/widgets/meteo-day/MeteoDay.css
@@ -11,11 +11,15 @@
 
 .day-icon {
     flex: 1;
+    display: flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .day-icon img {
-    width: 100%;
-    height: 100%;
+    width: 85%;
+    height: 85%;
 }
 
 .meteo-temperature,
