--- a/src/components/widgets/navbar/NavBar.css
+++ b/src/components/widgets/navbar/NavBar.css
@@ -56,8 +56,6 @@
   overflow: hidden;
   padding: 1em 0;
   width: 100%;
-  /* border: 1px solid grey; */
-  /* border-radius: 0px, 10px, 10px, 0px; */
 }
 
 .dropdown-search li{
@@ -119,9 +117,14 @@
   padding-right: 0.5em;
 }
 
-.user-img {
+.user-img  {
   width: 3.75em;
   height: 3.75em;
   border-radius: 50%;
   background-color: var(--primary-color-light);
+}
+
+.user-img img {
+  width: 100%;
+  border-radius: 50%;
 }
