--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -3,4 +3,19 @@
     width: 100%;
     border-radius: 2.5em;
     background-color: var(--primary-color-light);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 1.5em;
+}
+.widgets-container{
+    width: 98%;
+    position: relative;
+    top:-1.5em;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1.25em;
 }
