--- a/src/components/widgets/meteo-three-day/MeteoThreeDay.css
+++ b/src/components/widgets/meteo-three-day/MeteoThreeDay.css
@@ -1,27 +1,28 @@
-.meteo-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.meteo-infos {
+.meteo-infos-3d {
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.day-one-infos,
-.day-two-infos,
-.day-three-infos {
-    display: flex;
-    align-items: flex-start;
     justify-content: space-between;
+    padding-top: .8em;
 }
 
-.day-one,
-.day-two,
-.day-three {
-    font-size: 0.5em;
-    color: var(--text-color);
+.day-infos-3d {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--primary-color-light);
+}
+
+.day-infos-3d:last-child {
+    border-bottom: none;
+}
+
+.day-icon-3d {
+    width: 2em;
+}
+
+.day-date-3d {
+    font-size: .8em;
+    width: 55%;
 }
