--- a/src/components/widgets/navbar/NavBar.css
+++ b/src/components/widgets/navbar/NavBar.css
@@ -4,8 +4,9 @@
   height: 16em;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   background: linear-gradient(90deg, #b5cec5, #71908a);
-  padding: 1.2em 1.5em;
+  padding: 2em 1.6em;
   border-radius: 25px;
   box-shadow: 7px 0 12px rgba(65, 89, 89, 0.3);
 }
@@ -15,12 +16,11 @@
   width: 100%;
   height: 100%;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .logo img {
-  width: 12em;
-  max-width: 100%;
+  width: 9em;
 }
 
 /* ------------------Block search input -------------------------- */
@@ -51,7 +51,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 6.6em;
+  top: 7.2em;
   border-radius: 1em;
   overflow: hidden;
   padding: 1em 0;
@@ -77,14 +77,11 @@
   display: none;
 }
 
-
-
 .current-location {
   display: flex;
   flex-direction: row;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
-  color: var(--primary-color-light);
   padding-left: 0.5em;
   padding-right: 0.5em;
 }
@@ -95,10 +92,17 @@
 
 .selected-spot {
   padding-left: 0.5em;
+  color: var(--text-color);
 }
 
 .webcam-link {
   padding-left: 0.5em;
+}
+
+.webcam-link a{
+  color: var(--primary-color);
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* ------------------Block login -------------------------- */
