--- a/src/components/forecast-cards/ForecastCardBackground.css
+++ b/src/components/forecast-cards/ForecastCardBackground.css
@@ -7,6 +7,8 @@
     box-shadow: 7px 0 12px rgba(65, 89, 89, 0.3);
     padding: 2em;
     max-width: 1160px;
+    display: flex;
+    flex-direction: column;
 }
 
 .header{
@@ -44,6 +46,11 @@
    margin-left: 28px;
  }
 
- .spotNameWebcam:hover{
+.spotNameWebcam:hover{
     text-decoration:underline;
-  }
+}
+
+.bodyForecastCard{
+    margin-top: 2em;
+    display: flex;
+}
