extended-card style done

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   --primary-color-medium: #68918a;
   --primary-color-regular: #afcfc4;
   --primary-color-light: #eff4f1;
+  --primary-color-very-light: #f8faf9;
   --secondary-color: #efbc80;
 
   /*Typography variables*/
