--- a/src/components/forecast-cards/ForecastCardBackground.css
+++ b/src/components/forecast-cards/ForecastCardBackground.css
@@ -53,7 +53,8 @@
 .bodyForecastCard{
     margin-top: 2em;
     display: flex;
-    overflow: hidden;
+    /* overflow: hidden; */
+    overflow-y: scroll;
 }
 
 .dayDate{
