--- a/src/components/forecast-cards/ForecastCardBackground.css
+++ b/src/components/forecast-cards/ForecastCardBackground.css
@@ -1,5 +1,5 @@
 .background-forcast{
-    width: 1160px;
+    width: 100%;
     display: flex;
     background-color: white;
     border-radius: 1.6em;
