login feature finished

--- a/src/components/widgets/login/Login.css
+++ b/src/components/widgets/login/Login.css
@@ -1,5 +1,7 @@
 .auth-form-container {
-  position: absolute;
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
   z-index: 10000;
   display: flex;
   flex-direction: column;
@@ -10,15 +12,22 @@
   background-color: var(--primary-color-light);
   box-shadow: 7px 0 12px rgba(65, 89, 89, 0.3);
 }
+
 .invisible {
   display: none;
 }
 
-.login-form {
+.auth-form-container::backdrop {
+  background: darkgray;
+}
+
+.login-form,
+.register-form {
   display: flex;
   flex-direction: column;
   margin-bottom: 2em;
 }
+
 .label-form {
   text-align: left;
   padding: 0.25rem 0;
