--- a/src/components/forecast-cards/forecast-card-extended/ForecastCardExtended.css
+++ b/src/components/forecast-cards/forecast-card-extended/ForecastCardExtended.css
@@ -1,14 +1,35 @@
 .daily-extended-forecast{
     display: flex;
+    height: 68.3%;
+}
+.hourly-wind-container{
+    height: 27.9%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hourly-swell-container{
+    height: 54%;
+}
+
+.hourly-period{
+    height: 18%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hourly-forecast{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     text-align: center;
 }
+
+
+
 
 .time,
 .hourly-energy,
@@ -22,6 +43,7 @@
     width: 100%;
     padding: .5em;
 }
+
 
 .hourly-wind-container,
 .hourly-period{
