--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -12,6 +12,7 @@
 
 .grid{
     width: 98%;
+    max-width: 1100px;
     position: relative;
     top:-4em;
     display: flex;
@@ -23,7 +24,6 @@
 
 
   /*
-  
   .my-custom-content {
     width: 1000px;
   }
@@ -42,4 +42,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  } */
+  } 
+  */
