--- a/client/src/pages/Dashboard.css
+++ b/client/src/pages/Dashboard.css
@@ -1,4 +1,5 @@
 .dashboard {
+  position: relative;
   max-width: 1280px;
   width: 100%;
   border-radius: 2.5em;
@@ -8,7 +9,14 @@
   align-items: center;
   justify-content: flex-start;
   padding: 1.5em;
+  margin: 1em;
 }
+
+.dashboard.fixed{
+  position: fixed;
+  width: calc(100vw - 2em);
+}
+
 .widgets-container {
   width: 98%;
   position: relative;
