correcting general css

--- a/client/src/components/widgets/Dropdown-menu/DropdownMenu.css
+++ b/client/src/components/widgets/Dropdown-menu/DropdownMenu.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap : 2em;
     padding: 4.5em;
     overflow-y: auto;
 }
@@ -26,7 +27,7 @@
     font-weight: 100;
 }
 
-.login-menu,
+.login-menu-dropdown,
 .widgets-menu{
     width: 100%;
     max-width: 1280px;
@@ -60,6 +61,7 @@
     align-items: center;
     justify-content: center;
     flex :1;
+    padding-top: 2em;
 }
 
  .widgets-grid{
