--- a/client/src/components/widgets/meteo-three-day/MeteoThreeDay.css
+++ b/client/src/components/widgets/meteo-three-day/MeteoThreeDay.css
@@ -26,3 +26,37 @@
     font-size: .8em;
     width: 55%;
 }
+
+@media screen and (max-width : 785px) {
+    .card-content.meteo-infos-3d {
+        flex-direction: row;
+    }
+
+    .day-infos-3d {
+        flex-direction: column;
+        flex:1;
+        align-items: center;
+        justify-content: center;
+        border-bottom: none;
+        border-right: 1px solid var(--primary-color-light);
+    }
+
+    .day-infos-3d:last-child {
+        border-right: none;
+    }
+
+    .day-date-3d{
+        width:90%;
+        text-align: center;
+        font-size: 1em;
+    }
+
+    .day-icon-3d{
+        width: 3em;
+        margin: .25em 0;
+    }
+
+    .day-temp{
+        font-size: 1.2em;
+    }
+}
