--- a/client/src/components/widgets/navbar/ResponsiveNavBar.css
+++ b/client/src/components/widgets/navbar/ResponsiveNavBar.css
@@ -13,6 +13,10 @@
         align-items: center;
     }
 
+    .dropdown-search {
+        top: 3.2em;
+    }
+
     .logo-and-burger{
         justify-content: space-between;
         align-items: center;
