--- a/client/src/components/widgets/login/Login.css
+++ b/client/src/components/widgets/login/Login.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 10000;
+  z-index: 999;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,6 +42,10 @@
   cursor: pointer;
   outline: none;
   background-color: #fff;
+}
+
+.btn-login{
+  text-align: center;
 }
 
 .btn-link {
