ajout repositionement grid + work on localStorage

--- a/client/src/components/forecast-cards/ResponsiveForecastCard.css
+++ b/client/src/components/forecast-cards/ResponsiveForecastCard.css
@@ -4,7 +4,7 @@
     .background-forcast{
         max-width: 32,5rem;
         width: 26.4rem;
-        height:53.75em;
+        height:100%;
         padding: 0;
         overflow: hidden;
     }
