--- a/client/src/components/forecast-cards/ResponsiveForecastCard.css
+++ b/client/src/components/forecast-cards/ResponsiveForecastCard.css
@@ -2,7 +2,7 @@
 
     /* position global des element*/
     .background-forcast{
-        max-width: 32,5rem;
+        max-width: 32.5rem;
         width: 26.4rem;
         height:100%;
         padding: 0;
@@ -13,22 +13,18 @@
     position: relative;
     display: block;
     flex-direction: column;
-    
-    overflow-y: auto;
    }
-
 
    .minified-background{
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
     padding: 0.7rem;
+    cursor: pointer;
    }
-
 
    .daily-extended-forecast{
     width: 100%;
-    
    }
 
    /* Header */
@@ -41,20 +37,17 @@
         height: 1rem;
         width: 1rem;
         margin-right: 0.3em;
-    
     }
 
     .spotNameStars {
         height: 1rem;
         width: 1rem;
         margin-left: 0.3em;
-    
     }
 
     .header{
         padding: 1.3rem;
     }
-
 
    .background-visible{
     width: 100%;
@@ -64,7 +57,6 @@
     border-left: none;
     margin: 0;
     }
-
 
     /* element minified */
 
@@ -97,9 +89,6 @@
     width: 18%;
    }
 
-
-   
-
    .daily-forecast:nth-child(2n){
     background-color: var(--primary-color-light);
    }
@@ -109,7 +98,6 @@
    /*position des éléments extended*/
 
    .extendedCard{
-    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -127,17 +115,18 @@
     align-items: center;
     border: none;
     padding: 2.5rem;
-   }
-
-  
-
-
-   .extendedCard > .date > .dateTexte{
-    font-size: 1.8rem ;
-    padding: 0.5rem;
-    white-space: nowrap;
     }
 
+    .daily-extended-forecast .date{
+        width: 100%;
+        border-right: none;
+    }
+
+    .daily-extended-forecast .dateTexte{
+        font-size: 1.8rem ;
+        padding: 0.5rem;
+        white-space: nowrap;
+    }
 
     /* section data categorie*/
     .hourly-forecast{
